--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
@@ -31,7 +31,7 @@ participant_verifiable_capabilities:
       requirements_checked:
         checked:
           requirement_sets:
-            - "astm.f3411.v22a.service_provider#Intent-based participant support capability"
+            - "astm.f3411.v22a.service_provider#Intent-based participant support"
   - id: service_provider_extrapolation
     name: NetRID Service Provider with position extrapolation capability
     description: Participant fulfills testable requirements necessary to provide position extrapolation capability according to F3411-22a.
@@ -39,7 +39,56 @@ participant_verifiable_capabilities:
       requirements_checked:
         checked:
           requirement_sets:
-            - "astm.f3411.v22a.service_provider#Position extrapolation capability"
+            - "astm.f3411.v22a.service_provider#Position extrapolation"
+  - id: service_provider_operator_id_field
+    name: NetRID Service Provider providing operator id data field
+    description: Participant fulfills testable requirements necessary to provide operator id data field according to F3411-22a.
+    verification_condition:
+      requirements_checked:
+        checked:
+          requirement_sets:
+            - "astm.f3411.v22a.service_provider#Operator ID"
+  - id: service_provider_uas_id_serial_number_field
+    name: NetRID Service Provider providing UAS ID serial number data field
+    description: Participant fulfills testable requirements necessary to provide UAS ID serial number (option 1) data field according to F3411-22a.
+    verification_condition:
+      requirements_checked:
+        checked:
+          requirement_sets:
+            - "astm.f3411.v22a.service_provider#UAS ID Serial Number"
+  - id: service_provider_height_field
+    name: NetRID Service Provider providing height data field
+    description: Participant fulfills testable requirements necessary to provide height data field according to F3411-22a.
+    verification_condition:
+      requirements_checked:
+        checked:
+          requirement_sets:
+            - "astm.f3411.v22a.service_provider#Height"
+  - id: service_provider_operator_latitude_field
+    name: NetRID Service Provider providing operator latitude data field
+    description: Participant fulfills testable requirements necessary to provide operator latitude data field according to F3411-22a.
+    verification_condition:
+      requirements_checked:
+        checked:
+          requirement_sets:
+            - "astm.f3411.v22a.service_provider#Operator Latitude"
+  - id: service_provider_operator_longitude_field
+    name: NetRID Service Provider providing operator longitude data field
+    description: Participant fulfills testable requirements necessary to provide operator longitude data field according to F3411-22a.
+    verification_condition:
+      requirements_checked:
+        checked:
+          requirement_sets:
+            - "astm.f3411.v22a.service_provider#Operator Longitude"
+  - id: service_provider_operational_status_field
+    name: NetRID Service Provider providing operational status data field
+    description: Participant fulfills testable requirements necessary to provide operational status data field according to F3411-22a.
+    verification_condition:
+      requirements_checked:
+        checked:
+          requirement_sets:
+            - "astm.f3411.v22a.service_provider#Operational Status"
+
   - id: display_provider
     name: NetRID Display Provider
     description: NetRID Display Provider
@@ -48,6 +97,71 @@ participant_verifiable_capabilities:
         checked:
           requirement_sets:
             - "astm.f3411.v22a.display_provider#Automated verification"
+  - id: display_provider_operator_id_field
+    name: NetRID Display Provider transmitting operator id data field
+    description: Participant fulfills testable requirements necessary to transmit operator id data field according to F3411-22a.
+    verification_condition:
+      requirements_checked:
+        checked:
+          requirement_sets:
+            - "astm.f3411.v22a.display_provider#Operator ID"
+  - id: display_provider_uas_id_serial_number_field
+    name: NetRID Display Provider transmitting UAS ID serial number data field
+    description: Participant fulfills testable requirements necessary to transmit UAS ID serial number (option 1) data field according to F3411-22a.
+    verification_condition:
+      requirements_checked:
+        checked:
+          requirement_sets:
+            - "astm.f3411.v22a.display_provider#UAS ID Serial Number"
+  - id: display_provider_height_field
+    name: NetRID Display Provider transmitting height data field
+    description: Participant fulfills testable requirements necessary to transmit height data field according to F3411-22a.
+    verification_condition:
+      requirements_checked:
+        checked:
+          requirement_sets:
+            - "astm.f3411.v22a.display_provider#Height"
+  - id: display_provider_track_direction_field
+    name: NetRID Display Provider transmitting track direction data field
+    description: Participant fulfills testable requirements necessary to transmit track direction data field according to F3411-22a.
+    verification_condition:
+      requirements_checked:
+        checked:
+          requirement_sets:
+            - "astm.f3411.v22a.display_provider#Track Direction"
+  - id: display_provider_speed_field
+    name: NetRID Display Provider transmitting speed data field
+    description: Participant fulfills testable requirements necessary to transmit speed data field according to F3411-22a.
+    verification_condition:
+      requirements_checked:
+        checked:
+          requirement_sets:
+            - "astm.f3411.v22a.display_provider#Speed"
+  - id: display_provider_operator_latitude_field
+    name: NetRID Display Provider transmitting operator latitude data field
+    description: Participant fulfills testable requirements necessary to transmit operator latitude data field according to F3411-22a.
+    verification_condition:
+      requirements_checked:
+        checked:
+          requirement_sets:
+            - "astm.f3411.v22a.display_provider#Operator Latitude"
+  - id: display_provider_operator_longitude_field
+    name: NetRID Display Provider transmitting operator longitude data field
+    description: Participant fulfills testable requirements necessary to transmit operator longitude data field according to F3411-22a.
+    verification_condition:
+      requirements_checked:
+        checked:
+          requirement_sets:
+            - "astm.f3411.v22a.display_provider#Operator Longitude"
+  - id: display_provider_operational_status_field
+    name: NetRID Display Provider transmitting operational status data field
+    description: Participant fulfills testable requirements necessary to transmit operational status data field according to F3411-22a.
+    verification_condition:
+      requirements_checked:
+        checked:
+          requirement_sets:
+            - "astm.f3411.v22a.display_provider#Operational Status"
+
   - id: dss_operator
     name: NetRID DSS Operator
     description: Participant fulfills testable requirements necessary to act operate a NetRID Discovery and Synchronization Service instance according to F3411-22a.
