--- a/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/network_identification.yaml
@@ -1,4 +1,4 @@
-name: U-space network identification
+name: U-Space network identification
 resources:
   flights_data: resources.netrid.FlightDataResource
   service_providers: resources.netrid.NetRIDServiceProviders
@@ -17,8 +17,8 @@ actions:
       dss_instances: dss_instances
   on_failure: Continue
 participant_verifiable_capabilities:
-- id: service_provider
-  name: U-Space NetRID Service Provider
+- id: uspace_netrid_service_provider
+  name: U-Space ASTM NetRID Service Provider
   description: Participant fulfills testable requirements necessary to act as a NetRID Service Provider according to F3411-22a with additional information required for U-Space.
   verification_condition:
     all_conditions:
@@ -33,16 +33,6 @@ participant_verifiable_capabilities:
               - service_provider_operator_latitude_field # Operator Location
               - service_provider_operational_status_field # Operational Status
               - service_provider_operator_longitude_field # Operator Location
-            capability_location: '$.actions[?(@.test_suite)].test_suite[?(@.suite_type=="suites.astm.utm.f3411_v22a")]'
-- id: display_provider
-  name: U-Space NetRID Display Provider
-  description: Participant fulfills testable requirements necessary to act as a NetRID Display Provider according to F3411-22a with additional information required for U-Space.
-  verification_condition:
-    all_conditions:
-      conditions:
-        - no_failed_checks: {}
-        - capability_verified:
-            capability_ids:
               - display_provider
               - display_provider_operator_id_field # Operator Registration
               - display_provider_uas_id_serial_number_field # Serial Number
