--- a/monitoring/uss_qualifier/test_data/che/flight_intents/general_flight_auth_flights.yaml
+++ b/monitoring/uss_qualifier/test_data/che/flight_intents/general_flight_auth_flights.yaml
@@ -24,7 +24,7 @@ intents:
               # TODO: Change to SFC once mock_uss can process that datum
               reference: W84
             start_time:
-              start_of_test: {}
+              time_during_test: StartOfTestRun
               use_timezone: Europe/Berlin
             end_time:
               offset_from:
@@ -32,7 +32,7 @@ intents:
                   next_day:
                     time_zone: Europe/Zurich
                     starting_from:
-                      start_of_test: {}
+                      time_during_test: StartOfTestRun
                     days_of_the_week: ["Tu", "Th"]
                 offset: 12h
       additional_information:
@@ -81,7 +81,7 @@ intents:
                 starting_from:
                   offset_from:
                     starting_from:
-                      start_of_test: {}
+                      time_during_test: StartOfTestRun
                     offset: 12h
             duration: 5m
       additional_information:
