--- a/monitoring/uss_qualifier/test_data/che/flight_intents/non_conflicting.yaml
+++ b/monitoring/uss_qualifier/test_data/che/flight_intents/non_conflicting.yaml
@@ -26,7 +26,7 @@ intents:
             start_time:
               offset_from:
                 starting_from:
-                  start_of_test: { }
+                  time_during_test: StartOfTestRun
                 offset: -1s
             duration: 5m
 
@@ -78,7 +78,7 @@ intents:
             start_time:
               offset_from:
                 starting_from:
-                  start_of_test: { }
+                  time_during_test: StartOfTestRun
                 offset: -1s
             duration: 5m
 
