--- a/monitoring/uss_qualifier/test_data/usa/kentland/flight_intents/non_conflicting.yaml
+++ b/monitoring/uss_qualifier/test_data/usa/kentland/flight_intents/non_conflicting.yaml
@@ -26,7 +26,7 @@ intents:
             start_time:
               offset_from:
                 starting_from:
-                  start_of_test: { }
+                  time_during_test: StartOfTestRun
                 offset: -1s
             duration: 5m
 
@@ -79,7 +79,7 @@ intents:
             start_time:
               offset_from:
                 starting_from:
-                  start_of_test: { }
+                  time_during_test: StartOfTestRun
                 offset: -1s
             duration: 5m
 
@@ -101,8 +101,3 @@ intents:
         operator_id: CHEo5kut30e0mt01-qwe
         uas_id: ''
         uas_type_certificate: ''
-
-
-
-
-
