--- a/monitoring/uss_qualifier/test_data/che/flight_intents/invalid_flight_intents.yaml
+++ b/monitoring/uss_qualifier/test_data/che/flight_intents/invalid_flight_intents.yaml
@@ -25,7 +25,7 @@ intents:
             start_time:
               offset_from:
                 starting_from:
-                  start_of_test: {}
+                  time_during_test: StartOfTestRun
                 offset: -1s
             duration: 5m
 
@@ -62,7 +62,7 @@ intents:
             - start_time:
                 offset_from:
                   starting_from:
-                    start_of_test: { }
+                    time_during_test: StartOfTestRun
                   offset: 32d
 
   valid_conflict_tiny_overlap:
