--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -16,6 +16,7 @@ v1:
         au_problematically_big_area: {$ref: 'library/resources.yaml#/au_problematically_big_area'}
 
         utm_auth: {$ref: 'library/environment.yaml#/utm_auth'}
+        second_utm_auth: {$ref: 'library/environment.yaml#/second_utm_auth'}
         mock_uss_instances_scdsc: {$ref: 'library/environment.yaml#/mock_uss_instances_scdsc'}
         mock_uss_instance_uss6: {$ref: 'library/environment.yaml#/mock_uss_instance_uss6'}
         scd_version_providers: {$ref: 'library/environment.yaml#/scd_version_providers'}
@@ -61,6 +62,7 @@ v1:
           evaluation_configuration: netrid_observation_evaluation_configuration
           netrid_dss_instances: netrid_dss_instances_v22a
           utm_client_identity: utm_client_identity
+          second_utm_auth: second_utm_auth
           id_generator: id_generator
           service_area: kentland_service_area
           problematically_big_area: au_problematically_big_area
@@ -89,6 +91,7 @@ v1:
                 evaluation_configuration: evaluation_configuration
                 netrid_dss_instances: netrid_dss_instances
                 utm_client_identity: utm_client_identity
+                second_utm_auth: second_utm_auth
                 id_generator: id_generator
                 service_area: service_area
                 problematically_big_area: problematically_big_area
