--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -13,6 +13,7 @@ v1:
 
         # Mapping of <resource name in test suite> to <resource name in resource pool>
         resources:
+          id_generator: id_generator
           flight_planners: flight_planners
           conflicting_flights: conflicting_flights
           invalid_flight_intents: invalid_flight_intents
@@ -20,6 +21,7 @@ v1:
           dss: dss
           dss_instances: dss_instances
           mock_uss: mock_uss
+          second_utm_auth: second_utm_auth
 
     # This block defines all the resources available in the resource pool.
     # Presumably all resources defined below would be used either
@@ -34,6 +36,30 @@ v1:
           specification:
             # To avoid putting secrets in configuration files, the auth spec (including sensitive information) will be read from the AUTH_SPEC environment variable
             environment_variable_containing_auth_spec: AUTH_SPEC
+
+        # Means by which uss_qualifier can discover which subscription ('sub' claim of its tokes) it is described by
+        utm_client_identity:
+          resource_type: resources.communications.ClientIdentityResource
+          dependencies:
+            auth_adapter: utm_auth
+          specification:
+            # Audience and scope to be used to issue a dummy query, should it be required to discover the subscription
+            whoami_audience: localhost
+            whoami_scope: rid.display_provider
+
+        # Means by which uss_qualifier generates identifiers
+        id_generator:
+          $content_schema: monitoring/uss_qualifier/resources/definitions/ResourceDeclaration.json
+          resource_type: resources.interuss.IDGeneratorResource
+          dependencies:
+            client_identity: utm_client_identity
+
+        # A second auth adapter, for checks that require a second set of credentials for accessing the ecosystem.
+        # Note that the 'sub' claim of the tokens obtained through this adepter MUST be different from the first auth adapter.
+        second_utm_auth:
+          resource_type: resources.communications.AuthAdapterResource
+          specification:
+            environment_variable_containing_auth_spec: AUTH_SPEC_2
 
         # Set of USSs capable of being tested as flight planners
         flight_planners:
