--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -1,8 +1,18 @@
 name: DSS testing for ASTM NetRID F3548-21
 resources:
   dss: resources.astm.f3548.v21.DSSInstanceResource
+  second_utm_auth: resources.communications.AuthAdapterResource
   all_dss_instances: resources.astm.f3548.v21.DSSInstancesResource?
+  flight_intents: resources.flight_planning.FlightIntentsResource
+  id_generator: resources.interuss.IDGeneratorResource
 actions:
+  - test_scenario:
+      scenario_type: scenarios.astm.utm.OpIntentAccessControl
+      resources:
+        dss: dss
+        second_utm_auth: second_utm_auth
+        flight_intents: flight_intents
+        id_generator: id_generator
   - test_scenario:
       scenario_type: scenarios.astm.utm.DSSInteroperability
       resources:
