--- a/monitoring/uss_qualifier/test_data/che/flight_intents/conflicting_flights.yaml
+++ b/monitoring/uss_qualifier/test_data/che/flight_intents/conflicting_flights.yaml
@@ -27,12 +27,12 @@ intents:
             start_time:
               offset_from:
                 starting_from:
-                  time_during_test: StartOfTestRun
+                  time_during_test: TimeOfEvaluation
                 offset: -1s
             end_time:
               offset_from:
                 starting_from:
-                  time_during_test: StartOfTestRun
+                  time_during_test: TimeOfEvaluation
                 offset: 8m
 
       astm_f3548_21:
@@ -131,12 +131,12 @@ intents:
             start_time:
               offset_from:
                 starting_from:
-                  time_during_test: StartOfTestRun
+                  time_during_test: TimeOfEvaluation
                 offset: -1s
             end_time:
               offset_from:
                 starting_from:
-                  time_during_test: StartOfTestRun
+                  time_during_test: TimeOfEvaluation
                 offset: 8m
 
       astm_f3548_21:
