--- a/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
@@ -145,6 +145,27 @@ actions:
       roles:
         - uss1
   on_failure: Continue
+- action_generator:
+    generator_type: action_generators.flight_planning.FlightPlannerCombinations
+    resources:
+      flight_planners: flight_planners
+      nominal_planning_selector: nominal_planning_selector?
+      priority_preemption_flights: priority_preemption_flights
+      dss: dss
+    specification:
+      action_to_repeat:
+        test_scenario:
+          scenario_type: scenarios.astm.utm.DownUSSEqualPriorityNotPermitted
+          resources:
+            flight_intents: priority_preemption_flights
+            tested_uss: uss1
+            dss: dss
+        on_failure: Continue
+      combination_selector_source: nominal_planning_selector
+      flight_planners_source: flight_planners
+      roles:
+        - uss1
+  on_failure: Continue
 - test_scenario:
     scenario_type: scenarios.astm.utm.AggregateChecks
     resources:
