[uss_qualifier] improve documentation for op intent reference ACL validation

--- a/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/dss_probing.yaml
@@ -7,7 +7,7 @@ resources:
   id_generator: resources.interuss.IDGeneratorResource
 actions:
   - test_scenario:
-      scenario_type: scenarios.astm.utm.OpIntentAccessControl
+      scenario_type: scenarios.astm.utm.OpIntentReferenceAccessControl
       resources:
         dss: dss
         second_utm_auth: second_utm_auth
